--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
