--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@ai-sdk/deepseek": "^0.1.4",
     "@ai-sdk/groq": "^1.1.3",
-    "@base-ui-components/react": "^1.0.0-alpha.5",
-    "@google/generative-ai": "^0.21.0",
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -29,6 +28,7 @@
     "exa-js": "^1.4.8",
     "framer-motion": "^12.0.5",
     "geist": "^1.3.1",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.468.0",
     "marked-react": "^3.0.0",
     "next": "14.2.23",
