--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/deepseek": "^0.1.4",
     "@ai-sdk/groq": "^1.1.3",
     "@neondatabase/serverless": "^0.10.4",
+    "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
